--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=4000
 MONGO_URI=mongodb+srv://yashjagtap:Yash%401761@cluster0.frgl8ss.mongodb.net/realtime_ml_chat
 JWT_SECRET=test123
-ML_MODEL_URL=http://localhost:5000/predict
+ML_MODEL_URL= https://mlforward.onrender.com
